--- a/packages/react-app/src/App.css
+++ b/packages/react-app/src/App.css
@@ -14,7 +14,7 @@
 	--theme-success-color: #52c41a;
 	--theme-warning-color: #faad14;
 	--theme-danger-color: #ff4d4f;
-	--theme-bubble-bg-color: #f2f4f7;
+	--theme-bubble-bg-color: #F4F6F9;
 	--theme-code-block-bg-color: #fff;
 }
 
