--- a/packages/react-app/src/layout/map-layout.css
+++ b/packages/react-app/src/layout/map-layout.css
@@ -24,6 +24,25 @@
   text-align: center;
 }
 
+.marker-store-text {
+	border-radius: 8px;
+	border: 1px solid #f2f3f5;
+	background: #14C780CC;
+	box-shadow:
+		0px 1px 10px 0px rgba(29, 33, 41, 0.05),
+		0px 4px 5px 0px rgba(29, 33, 41, 0.08),
+		0px 2px 4px -1px rgba(29, 33, 41, 0.12);
+	color: #fff;
+	text-overflow: ellipsis;
+	font-family: 'PingFang SC';
+	font-size: 14px;
+	font-style: normal;
+	font-weight: 500;
+  padding: 6px 8px;
+  min-width: 114px;
+  text-align: center;
+}
+
 .popup-confign-content {
   position: absolute;
   left: 50%;
